# codechats-manager

./: .gitignore  CHANGELOG.md  CHECKSUMS.txt  DEVELOPMENT.md  FILES.txt  LICENSE  Makefile  PACKAGE_INFO.md  README.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  CLAUDE-CODE-SETUP.md  CONTRIBUTING.md  EXAMPLES.md  TROUBLESHOOTING.md
examples/: basic-usage.md
scripts/: dev-setup.sh  install.sh  quick-install.sh
src/: codechats-cache.py  codechats-main.sh
tests/: test.sh
